# score-simple-api-2

./: CMakeLists.txt  README.md  score_addon_simpleapi2.cpp
.github/workflows/: jit.yml
Examples/: AudioEffect.hpp  AudioEffectExample.hpp  AudioEffectWithSidechains.hpp  CCC.hpp  ControlGallery.hpp  Distortion.hpp  EfficientTest.hpp  Empty.hpp  RawPorts.hpp  SampleAccurateFilter.hpp  SampleAccurateGenerator.hpp  Synth.hpp  TextureFilter.hpp  TextureGenerator.hpp  TrivialFilter.hpp  TrivialGenerator.hpp
SimpleApi2/: Attributes.hpp  CCC.hpp  Concepts.hpp  Distortion.hpp  Executor.hpp  ExecutorNode.hpp  Metadatas.hpp  ProcessModel.hpp
oscr/: Attributes.hpp  Concepts.hpp  Executor.hpp  ExecutorNode.hpp  GpuNode.hpp  Metadatas.hpp  ProcessModel.hpp
